--- a/AmostraDeTalentos/src/main/webapp/WEB-INF/web.xml
+++ b/AmostraDeTalentos/src/main/webapp/WEB-INF/web.xml
@@ -9,5 +9,16 @@
             30
         </session-timeout>
     </session-config>
-    
+    <servlet> 
+      <servlet-name>Jersey RESTful Application</servlet-name> 
+      <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class> 
+      <init-param> 
+         <param-name>jersey.config.server.provider.packages</param-name> 
+         <param-value>br.com.entra21.amostradetalentos.rest</param-value> 
+      </init-param> 
+   </servlet> 
+   <servlet-mapping> 
+      <servlet-name>Jersey RESTful Application</servlet-name> 
+      <url-pattern>/rest/*</url-pattern> 
+   </servlet-mapping>   
 </web-app>
