commit aba calendario

--- a/AmostraDeTalentos/.settings/org.eclipse.core.resources.prefs
+++ b/AmostraDeTalentos/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,12 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/webapp/calendario.html=UTF-8
 encoding//src/main/webapp/clientes.html=UTF-8
+encoding//src/main/webapp/home.html=UTF-8
+encoding//src/main/webapp/index.html=UTF-8
+encoding//src/main/webapp/index_example.html=UTF-8
+encoding//src/main/webapp/login.html=UTF-8
+encoding//src/main/webapp/menu.html=UTF-8
+encoding//src/main/webapp/naoAutorizado.html=UTF-8
+encoding//src/main/webapp/toolbars.html=UTF-8
 encoding/<project>=UTF-8
