--- a/AmostraDeTalentos/.settings/org.eclipse.core.resources.prefs
+++ b/AmostraDeTalentos/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/webapp/calendario.html=UTF-8
 encoding//src/main/webapp/clientes.html=UTF-8
+encoding//src/main/webapp/funcionarios.html=UTF-8
 encoding//src/main/webapp/home.html=UTF-8
 encoding//src/main/webapp/index.html=UTF-8
 encoding//src/main/webapp/index_example.html=UTF-8
