--- a/AmostraDeTalentos/.settings/org.eclipse.core.resources.prefs
+++ b/AmostraDeTalentos/.settings/org.eclipse.core.resources.prefs
@@ -9,5 +9,6 @@ encoding//src/main/webapp/index_example.html=UTF-8
 encoding//src/main/webapp/login.html=UTF-8
 encoding//src/main/webapp/menu.html=UTF-8
 encoding//src/main/webapp/naoAutorizado.html=UTF-8
+encoding//src/main/webapp/perfil.html=UTF-8
 encoding//src/main/webapp/toolbars.html=UTF-8
 encoding/<project>=UTF-8
